<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_view_details"
        android:icon="@drawable/action_view_details"
        android:title="@string/view_details"
        />

    <item
        android:id="@+id/action_edit_app"
        android:icon="@drawable/action_edit_app"
        android:title="@string/edit_app"
        />

    <!--<item
        android:id="@+id/action_download_aab"
        android:icon="@drawable/action_download"
        android:title="@string/download_aab"
        />-->

    <item
        android:id="@+id/action_download_apk"
        android:icon="@drawable/action_download"
        android:title="@string/download_apk"
        />

    <item
        android:id="@+id/action_delete_app"
        android:icon="@drawable/action_delete_app"
        android:title="@string/delete_app"
        />

</menu>