<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@color/white"
    tools:context=".presentations.ui.activities.tutorials.TutorialDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarLL"
        android:background="@drawable/toolbar_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLL"
        app:layout_constraintBottom_toTopOf="@+id/container"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/header_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="0dp"
                app:cardElevation="@dimen/_2sdp"
                app:cardCornerRadius="@dimen/_16sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_18sdp"
                app:cardBackgroundColor="@color/white"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/app_icon_iv"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        app:srcCompat="@drawable/ic_home_create_app"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <TextView
                        android:id="@+id/app_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/app_icon_iv"
                        android:textColor="@color/black_3"
                        android:text="@string/how_to_create_an_app"
                        android:textAlignment="center"
                        android:fontFamily="@font/arimo_regular"
                        android:textSize="@dimen/_16ssp"
                        android:includeFontPadding="false"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:maxLines="2"
                        />

                    <TextView
                        android:id="@+id/app_msg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/app_title"
                        android:textColor="@color/grey_1"
                        android:text="@string/step_by_step_guide_to_create_your_first_web_to_app_conversion"
                        android:textAlignment="center"
                        android:fontFamily="@font/arimo_regular"
                        android:textSize="@dimen/_11ssp"
                        android:includeFontPadding="false"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:maxLines="2"
                        />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/reachUsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="0dp"
                app:cardElevation="@dimen/_2sdp"
                app:cardCornerRadius="@dimen/_16sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                app:cardBackgroundColor="@color/white"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_1"
                        android:text="@string/step_by_step_guide"
                        android:fontFamily="@font/arimo_regular"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        android:includeFontPadding="false"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        />


                    <TextView
                        android:id="@+id/f1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_1"
                        android:text="@string/enter_your_website_url"
                        android:fontFamily="@font/arimo_regular"
                        android:textSize="@dimen/_11ssp"
                        android:includeFontPadding="false"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:drawablePadding="@dimen/_8sdp"
                        app:drawableStartCompat="@drawable/count_1"
                        />


                    <TextView
                        android:id="@+id/f2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_1"
                        android:text="@string/fill_in_app_basic_information"
                        android:fontFamily="@font/arimo_regular"
                        android:textSize="@dimen/_11ssp"
                        android:includeFontPadding="false"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:drawablePadding="@dimen/_8sdp"
                        app:drawableStartCompat="@drawable/count_2"
                        />


                    <TextView
                        android:id="@+id/f3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_1"
                        android:text="@string/customize_branding_and_colors"
                        android:fontFamily="@font/arimo_regular"
                        android:textSize="@dimen/_11ssp"
                        android:includeFontPadding="false"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:drawablePadding="@dimen/_8sdp"
                        app:drawableStartCompat="@drawable/count_3"
                        />


                    <TextView
                        android:id="@+id/f4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_1"
                        android:text="@string/configure_app_features"
                        android:fontFamily="@font/arimo_regular"
                        android:textSize="@dimen/_11ssp"
                        android:includeFontPadding="false"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:drawablePadding="@dimen/_8sdp"
                        app:drawableStartCompat="@drawable/count_4"
                        />


                    <TextView
                        android:id="@+id/f5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_1"
                        android:text="@string/generate_and_download_apk"
                        android:fontFamily="@font/arimo_regular"
                        android:textSize="@dimen/_11ssp"
                        android:includeFontPadding="false"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:drawablePadding="@dimen/_8sdp"
                        app:drawableStartCompat="@drawable/count_5"
                        />


                </androidx.appcompat.widget.LinearLayoutCompat>



            </com.google.android.material.card.MaterialCardView>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>