<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_margin="@dimen/_6sdp"
    android:minHeight="@dimen/_80sdp"
    app:cardCornerRadius="@dimen/_16sdp"
    android:layoutDirection="ltr"
    android:foreground="?attr/selectableItemBackground"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/apkIV"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_bg"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/appNameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/apkIV"
            app:layout_constraintEnd_toStartOf="@+id/optionMenuBtn"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/_app_name"
            android:fontFamily="@font/arimo_regular"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_3"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:includeFontPadding="false"
            android:textAlignment="viewStart"
            />

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/apkIV"
            app:layout_constraintEnd_toStartOf="@+id/optionMenuBtn"
            app:layout_constraintTop_toBottomOf="@+id/appNameTv"
            android:text="@string/date"
            android:fontFamily="@font/arimo_regular"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/grey_1"
            android:includeFontPadding="false"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textAlignment="viewStart"
            />

        <TextView
            android:id="@+id/versionTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/apkIV"
            app:layout_constraintEnd_toStartOf="@+id/optionMenuBtn"
            app:layout_constraintTop_toBottomOf="@+id/dateTv"
            android:text="@string/version"
            android:fontFamily="@font/arimo_regular"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/grey_1"
            android:includeFontPadding="false"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textAlignment="viewStart"
            />

        <TextView
            android:id="@+id/statusTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/apkIV"
            app:layout_constraintEnd_toStartOf="@+id/optionMenuBtn"
            app:layout_constraintTop_toBottomOf="@+id/versionTv"
            android:text="@string/status"
            android:fontFamily="@font/arimo_regular"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/grey_1"
            android:includeFontPadding="false"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textAlignment="viewStart"
            />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/downloadApkBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_34sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/downloadBundleBtn"
            app:layout_constraintTop_toBottomOf="@+id/statusTv"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            app:cardBackgroundColor="@color/white"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/blue"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?attr/selectableItemBackground"
                android:minWidth="@dimen/_120sdp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo_regular"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/btn_download_apk"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>




        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/downloadBundleBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_34sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@+id/downloadApkBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusTv"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:cardBackgroundColor="@color/white"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/blue"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?attr/selectableItemBackground"
                android:minWidth="@dimen/_120sdp"
                >

                <TextView
                    android:id="@+id/downloadTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo_regular"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/btn_download_bundle"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>




        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatImageView
            tools:visibility="visible"
            android:visibility="gone"
            android:id="@+id/optionMenuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_option_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="?attr/selectableItemBackground"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>